Short paragraf about and footer

--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,20 @@
     
 
 }
-
+.footer {
+    background-color: #60182f;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    width: 99%;
+    color: #fafaff;
+}
 @media (max-width: 320px) {
     .h1 {
         font-size: 100%;
     }
     .h2 {
-        font-size: 80%;
+        font-size: 90%;
     }
 
 }
